--- a/src/dssweb.theme.magic/ucdavis.wireframe/sass/components/_navigation.scss
+++ b/src/dssweb.theme.magic/ucdavis.wireframe/sass/components/_navigation.scss
@@ -479,6 +479,7 @@
 
 .sticky {
 	position: fixed;
+	z-index: 10; // otherwise T2 and T11 filters overlay the sticky menu on mobile
 	bottom: 0px;
 	left: 0px;
 	width: 100%;
